--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="home-text1">Paper</span>
                 </button>
                 <a
-                  href="https://anonymous.4open.science/r/CRIPP-VQA/"
+                  href="https://github.com/Maitreyapatel/CRIPP-VQA/"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="home-cta-btn1 button anchor link"
@@ -211,7 +211,7 @@
                     <br>
                     <button class="card-panel waves-effect waves-light btn" onclick="showPlanning(0)">Planning QA</button>
                     <div class="row" id="planning0" style="display: none">
-                      <p><b>Q: Make the collition between teal cardboard sphere and olive cardboard sphere.</b></p>
+                      <p><b>Q: Make the collision between teal cardboard sphere and olive cardboard sphere.</b></p>
                       <p>A: Remove => purple cardboard cube</p><br>
                       <p><b>Q: Stop the collision between olive cardboard sphere and purple aluminium cube.</b></p>
                       <p>A: Repalce => teal aluminium cube by olive cardboard cube</p>
@@ -409,7 +409,17 @@
                     </svg>
                   </div>
                   <span class="home-text6 card-Text">
-                    Questions & Answers are available at: <a href="https://drive.google.com/file/d/1lwNJHgrk2K2W-1HmK0IDv8yOePZ67UWS/view?usp=sharing">Drive Link</a>
+                    Questions & Answers are available at: <a href="https://www.dropbox.com/sh/uifnwjtf1svj0wz/AAD_Fvul4itnott_tfVZBjkYa?dl=0">Drive Link</a>
+                  </span>
+                </div>
+                <div class="home-container4">
+                  <svg viewBox="0 0 1024 1024" class="home-icon04">
+                    <path
+                      d="M170 512q0-140 101-241t241-101 241 101 101 241-101 241-241 101-241-101-101-241z"
+                    ></path>
+                  </svg>
+                  <span class="home-text5 card-Text">
+                    Mask-RCNN features are available at: <a href="https://www.dropbox.com/sh/bg7x0alefrolxt7/AACETXENubA7KfMnZBikKR_pa?dl=0">Drive Link</a>
                   </span>
                 </div>
                 <div class="home-container5">
@@ -421,7 +431,7 @@
                     </svg>
                   </div>
                   <span class="home-text6 card-Text">
-                     To re-create the high-quality videos from the annotations follow instructions at: <a href="https://anonymous.4open.science/r/CRIPP-VQA/">Code Link</a>
+                     To re-create the high-quality videos from the annotations follow instructions at: <a href="https://github.com/Maitreyapatel/CRIPP-VQA/">Code Link</a>
                   </span>
                 </div>
                 <div class="home-container5">
